fix the menu preload not showing

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -44,7 +44,7 @@
 .notexttransform {
     text-transform: none !important;
 }
-.text-transfrom-none {
+.text-transform-none {
     text-transform: none !important;
 }
 .flex {
